syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.hpcclab.oaas.proto";

package oprc;

message ProtoOObject {
  optional string id = 1;
  int64 revision = 2;
  optional string cls = 3;
  optional OOState state = 4;
  map<string, string> refs = 5;
  bytes data = 6;
  int64 lastOffset = 7;
  optional string lastInv = 8;
}

message ProtoPOObject {
  ProtoOMeta meta = 1;
  bytes data = 2;
}

message ProtoOMeta {
  string id = 1;
  int64 revision = 2;
  string cls = 3;
  map<string, string> verIds = 4;
  map<string, string> refs = 5;
  int64 lastOffset = 6;
}


message OOState {
  map<string, string> overrideUrls = 1;
  map<string, string> verIds = 2;
}
